--- a/src/Views/EditRepositoryNode.axaml
+++ b/src/Views/EditRepositoryNode.axaml
@@ -40,7 +40,7 @@
           <DataTemplate>
             <Border Height="20" VerticalAlignment="Center">
               <Path Width="12" Height="12"
-                    Fill="{Binding Converter={x:Static c:BookmarkConverters.ToBrush}}"
+                    Fill="{Binding Converter={x:Static c:IntConverters.ToBookmarkBrush}}"
                     HorizontalAlignment="Center" VerticalAlignment="Center"
                     Data="{StaticResource Icons.Bookmark}"/>
             </Border>            
