--- a/src/Views/ConfigureWorkspace.axaml
+++ b/src/Views/ConfigureWorkspace.axaml
@@ -46,7 +46,7 @@
     </Grid>
 
     <!-- BODY -->
-    <Grid Grid.Row="1" ColumnDefinitions="200,*" Height="324" Margin="8">
+    <Grid Grid.Row="1" ColumnDefinitions="200,16,256" Height="324" Margin="8">
       <Border Grid.Column="0"
               BorderThickness="1" BorderBrush="{DynamicResource Brush.Border2}"
               Background="{DynamicResource Brush.Contents}">
@@ -104,12 +104,12 @@
         </Grid>
       </Border>
 
-      <ContentControl Grid.Column="1" Margin="16,0,0,0" Content="{Binding Selected}">
+      <ContentControl Grid.Column="2" Content="{Binding Selected}">
         <ContentControl.DataTemplates>
           <DataTemplate DataType="vm:Workspace">
             <Grid RowDefinitions="Auto,Auto,Auto,Auto">
               <TextBlock Grid.Row="0" Text="{DynamicResource Text.ConfigureWorkspace.Name}"/>
-              <TextBox Grid.Row="1" Margin="-4,4,0,0" CornerRadius="3" Height="28" Width="256" Text="{Binding Name, Mode=TwoWay}"/>
+              <TextBox Grid.Row="1" Margin="0,4,0,0" CornerRadius="3" Height="28" Text="{Binding Name, Mode=TwoWay}"/>
 
               <TextBlock Grid.Row="2" Margin="0,12,0,4" Text="{DynamicResource Text.ConfigureWorkspace.Color}"/>
               <v:ColorPicker Grid.Row="3" HorizontalAlignment="Left" Value="{Binding Color, Mode=TwoWay}"/>
